tests/fsharp/typeProviders/negTests/EVIL_PROVIDER_NamespaceName_Exception.bsl

EVIL_PROVIDER_NamespaceName_Exception.fsx(1,1,1,56): parse error FS3033: The type provider 'Provider.EvilProviderWhereNamespaceNameRaisesException' reported an error: deliberate error for testing purposes

EVIL_PROVIDER_NamespaceName_Exception.fsx(1,1,1,56): parse error FS3020: One or more errors seen during provided type setup
