tests/fsharp/typeProviders/negTests/EVIL_PROVIDER_NamespaceName_Exception.fsx
#r "provider_EVIL_PROVIDER_NamespaceName_Exception.dll"

open FSharp.EvilProviderWhereNamespaceNameRaisesException

